force-app/main/default/objects/Displays_Marketing_Material__c/Displays_Marketing_Material__c.object-meta.xml
<CustomObject>
    <label>Displays &amp; Marketing Material</label>
    <nameField>
        <label>Displays &amp; Marketing Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Displays &amp; Marketing Material</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>