force-app/main/default/objects/Displays_Marketing_Material__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finalized</fullName>
                <label>On site</label>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>On going</fullName>
                <isActive>false</isActive>
                <label>On going</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>