force-app/main/default/objects/Displays_Marketing_Material__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Settings</fullName>
            </value>
            <value>
                <fullName>Dakkar Panel Stand</fullName>
            </value>
            <value>
                <fullName>Highker Stand</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Krion countertop</fullName>
            </value>
            <value>
                <fullName>Krion tower</fullName>
            </value>
            <value>
                <fullName>Starwood Zone</fullName>
            </value>
            <value>
                <fullName>Xlight tower</fullName>
            </value>
            <value>
                <fullName>Xtone Countertop</fullName>
            </value>
            <value>
                <fullName>Xtone tower</fullName>
            </value>
            <value>
                <fullName>Cuna parker</fullName>
            </value>
            <value>
                <fullName>Table Display Rack XTONE</fullName>
            </value>
            <value>
                <fullName>Boxtone</fullName>
                <label>BOXTONE</label>
            </value>
            <value>
                <fullName>Exp. Tower Xtone 30x60</fullName>
            </value>
            <value>
                <fullName>Ex. Tower Xtone 25x28</fullName>
            </value>
            <value>
                <fullName>Binder</fullName>
            </value>
            <value>
                <fullName>Table Display Rack Altissima</fullName>
            </value>
            <value>
                <fullName>Countertop Altissima</fullName>
            </value>
            <value>
                <fullName>Krion Box</fullName>
            </value>
            <value>
                <fullName>Xtone Setting</fullName>
            </value>
            <value>
                <fullName>Altissima Setting</fullName>
            </value>
            <value>
                <fullName>Xtone Pantonier</fullName>
            </value>
            <value>
                <fullName>Xtone Catalogue</fullName>
            </value>
            <value>
                <fullName>Sample classifier Xtone 10x20</fullName>
            </value>
            <value>
                <fullName>Xtone Packtool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>